ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  deletionGracePeriodSeconds: 0
  deletionTimestamp: "2025-11-07T00:45:14Z"
  name: infrahash-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: infrahash-service
            port:
              number: 5000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: k8s-default-infrahas-405c5343f9-1146316303.us-east-2.elb.amazonaws.com
